--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HI</title>
 </head>
-<body>
+<body> <cohort one has a intership journey to kigali soon>
     <h1>fullname</h1> 
     <p>passwaerd</p>
     <p>egmail</p>
