aboutus school coding

--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HI</title>
-</head>
+</head><yes we aer go to coding school but happy ok mr abdu salim >
 <body>
     <h1>fullname</h1> 
     <p>passwaerd</p>
